homepage updated again

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,19 @@
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.4) 50%), url('<%= image_path("guitar-hero.jpg") %>')">
 
+<!-- img_path('assets/images/guitar-hero.jpg');"> -->
 
-<h1>GuitarBuddy</h1>
+  <div class="banner-content">
+    <h1>GuitarBuddy</h1>
+    <p>Play with the best guitar. Anywhere. Anytime</p>
 
+  <div class="search-bar">
+    <form action="/beds" class="form-inline padded">
+      <input type="text" class="form-control border-radius input-lg" placeholder="Brand">
+      <input type="text" name="address" class="form-control border-radius input-lg datepicker" placeholder="Address">
+<!--       <input type="text" name="date" class="form-control border-radius input-lg datepicker" placeholder="Date"> -->
+
+      <input type="submit" class="btn btn-danger btn-lg" value="Search">
+    </form>
+  </div>
+  </div>
+</div>
