--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,25 +1,34 @@
 // Import page-specific CSS files here.
 @import "home";
 
-// * {
-//   border: 1px solid black;
-// }
-
-
 .main-wrapper {
   display: flex;
   justify-content: space-between;
-}
-
-.card {
-  height: 250px;
+  margin: 10px;
+  .card {
+    height: 250px;
+    background-size: cover;
+    position: relative;
+    margin-bottom: 10px;
+    .card-description {
+      position:absolute;
+      bottom: 10px;
+      left: 10px;
+    }
+    .card-user {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+    }
+  }
 }
 
 .maps-container {
   height: 100vh;
-  width: 100%;
+  width: 500px;
+  flex: 0 0 450px;
+  position: sticky !important;
+  top: 0 !important;
 }
-
-
 
 
