--- a/app/views/guitars/index.html.erb
+++ b/app/views/guitars/index.html.erb
@@ -1,37 +1,28 @@
 <h1>Axes near you</h1>
-<%= link_to "search again", root_path %>
 
 <div class="main-wrapper"> <!-- contains both map and cards -->
 
-
   <div class="cards-container">
-
-<% @guitars.each do |guitar| %>
-
-  <%= link_to guitar_path(guitar.id) do %>
-
-    <div class="col-xs-12 col-sm-3">
-      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= guitar.image %>');">
-        <div class="card-description">
-          <h4><%= guitar.brand[0..20] %></h4>
-         </div>
-         <img class="card-user" src= '<%= guitar.user.avatar %>'>
+    <div class="row">
+      <% @guitars.each do |guitar| %>
+      <%= link_to guitar_path(guitar.id) do %>
+      <div class="col-xs-12 col-sm-4">
+        <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= guitar.image %>');">
+          <div class="card-description">
+            <h4><%= guitar.brand[0..20] %></h4>
+          </div>
+          <img class="card-user" src= '<%= guitar.user.avatar %>'>
+        </div>
       </div>
+      <% end %>
+      <% end %>
     </div>
+  </div>
 
-  <% end %>
 
-<% end %>
-
-</div>
-
-<div class="maps-container" style="background-image: url(http://via.placeholder.com/500x1000);">
+  <div class="maps-container" style="background-image: url(http://via.placeholder.com/500x1000);">
+  </div>
 
 </div>
 
-
-
-
-
-
-</div>
+<%= link_to "search again", root_path %>
