new logo to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
   <div class="banner-content">
     <h1>GuitarBuddy</h1>
-    <p>Play with the best guitar. Anywhere. Anytime</p>
+    <p>Rent the best guitar. Anywhere. Anytime</p>
 
   <div class="search-bar">
     <form action="/beds" class="form-inline padded">
