--- a/app/views/guitars/index.html.erb
+++ b/app/views/guitars/index.html.erb
@@ -11,6 +11,7 @@
           <div class="card-description">
             <h4><%= guitar.brand[0..20] %></h4>
             <p><%= guitar.price_per_day %> EUR/day</p>
+            <p>changing some stuff</p>
           </div>
           <img class="card-user" src= '<%= guitar.user.avatar %>'>
         </div>
