--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,30 +5,37 @@
   display: flex;
   justify-content: space-between;
   margin: 10px;
-  .card {
-    height: 250px;
-    background-size: cover;
-    position: relative;
-    margin-bottom: 10px;
-    .card-description {
-      position:absolute;
-      bottom: 10px;
-      left: 10px;
-    }
-    .card-user {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-    }
+  
+  .cards-container {
+    flex-grow: 1;
+    padding-right: 20px;
+
+    .card {
+      height: 250px;
+      background-size: cover;
+      position: relative;
+      margin-bottom: 10px;
+      .card-description {
+        position:absolute;
+        bottom: 10px;
+        left: 10px;
+      }
+      .card-user {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+      }
+    }    
+  }
+  
+  .maps-container {
+    height: 100vh;
+    width: 500px;
+    flex: 0 0 450px;
+    position: sticky !important;
+    top: 0 !important;
   }
 }
 
-.maps-container {
-  height: 100vh;
-  width: 500px;
-  flex: 0 0 450px;
-  position: sticky !important;
-  top: 0 !important;
-}
 
 
