--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
     <p>Rent the best guitar. Anywhere. Anytime</p>
 
   <div class="search-bar">
-    <form action="/beds" class="form-inline padded">
+    <form action="/guitars" class="form-inline padded">
       <input type="text" class="form-control border-radius input-lg" placeholder="Brand">
       <input type="text" name="address" class="form-control border-radius input-lg datepicker" placeholder="Address">
 <!--       <input type="text" name="date" class="form-control border-radius input-lg datepicker" placeholder="Date"> -->
