--- a/app/views/guitars/show.html.erb
+++ b/app/views/guitars/show.html.erb
@@ -1,4 +1,7 @@
- <div class="g-pic">
+<div class="place-photo-wrapper" style= "background-image:linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= image_path("guitar-hero1.jpg") %>')">
+</div>
+
+<div class="g-pic">
   <%= image_tag @guitar.image, alt: 'Guitar Picture'%>
 </div>
 
@@ -17,4 +20,3 @@
       </div>
     </div>
   </div>
-
