--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.4) 50%), url('<%= image_path("guitar-hero.jpg") %>')">
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.4) 5%), url('<%= image_path("guitar-hero2.jpg") %>')">
 
 <!-- img_path('assets/images/guitar-hero.jpg');"> -->
 
