--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,14 +6,39 @@
     <h1>GuitarBuddy</h1>
     <p>Rent the best guitar. Anywhere. Anytime</p>
 
+
+
+
+
+
+
   <div class="search-bar">
+
+
+
+
+
     <form action="/guitars" class="form-inline padded">
-      <input type="text" class="form-control border-radius input-lg" placeholder="Brand">
-      <input type="text" name="address" class="form-control border-radius input-lg datepicker" placeholder="Address">
-<!--       <input type="text" name="date" class="form-control border-radius input-lg datepicker" placeholder="Date"> -->
+
+
+      <input type="text" name="brand" class="form-control border-radius input-lg" placeholder="Brand">
+      <input type="text" name="address" class="form-control border-radius input-lg datepicker" placeholder="City">
+
 
       <input type="submit" class="btn btn-danger btn-lg" value="Search">
+
     </form>
+
+
+
   </div>
+
+
+
+
+
+
+
+
   </div>
 </div>
