--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: space-between;
   margin: 10px;
-  
+
   .cards-container {
     flex-grow: 1;
     padding-right: 20px;
@@ -26,10 +26,9 @@
         top: 10px;
         right: 10px;
       }
-    }    
+    }
   }
-  
-  .maps-container {
+  #map {
     height: 100vh;
     width: 500px;
     flex: 0 0 450px;
