--- a/app/views/guitars/index.html.erb
+++ b/app/views/guitars/index.html.erb
@@ -20,8 +20,8 @@
     </div>
   </div>
 
-  <div class="maps-container" style="background-image: url(http://via.placeholder.com/500x1000);">
-  </div>
+  <div id="map" data-markers="<%= @markers.to_json %>">
+</div>
 </div>
 
 <%= link_to "search again", root_path %>
