--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,10 @@
 // Specific CSS for your home-page
 
+form input.home-input {
+  font-size: 18px;
+  color: grey;
+}
+
 .banner {
   color: white;
   text-align: center;
@@ -25,6 +30,7 @@
 
 .btn {
   border-radius: 10px;
+  margin: 35px;
 }
 
 .border-radius {
