--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,18 +1,18 @@
-<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.4) 5%), url('<%= image_path("guitar-hero2.jpg") %>')">
+ <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.3) 0%, rgba(0,36,61,0.4) 5%), url('<%= image_path("guitar-hero2.jpg") %>')">
 
   <!-- img_path('assets/images/guitar-hero.jpg');"> -->
 
   <div class="banner-content">
     <h1>GuitarBuddy</h1>
-    <p>Rent the best guitar. Anywhere. Anytime</p>
+    <p>Rent the best guitar. Pick your brand, location and date</p>
 
 
     <div class="search-bar">
       <form action="/guitars" class="form-inline padded">
-        <input type="text" name="brand" class="form-control border-radius input-lg" placeholder="Brand">
-        <input type="text" name="address" class="form-control border-radius input-lg" placeholder="City">
-        <input type="date" name="starts_at" class="form-control border-radius input-lg datepicker" placeholder="City">
-        <input type="date" name="ends_at" class="form-control border-radius input-lg datepicker" placeholder="City">
+        <input type="text" name="brand" class="form-control border-radius input-lg home-input" placeholder="Brand">
+        <input type="text" name="address" class="form-control border-radius input-lg home-input" placeholder="City">
+        <input type="date" name="starts_at" class="form-control border-radius input-lg datepicker home-input" placeholder="City">
+        <input type="date" name="ends_at" class="form-control border-radius input-lg datepicker home-input" placeholder="City">
         <input type="submit" class="btn btn-danger btn-lg" value="Search">
       </form>
     </div>
