--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
     <div class="search-bar">
       <form action="/guitars" class="form-inline padded">
         <input type="text" name="brand" class="form-control border-radius input-lg" placeholder="Brand">
-        <input type="text" name="address" class="form-control border-radius input-lg" placeholder="City">
+        <input type="text" name="address" class="form-control border-radius input-lg" id="guitar_address" placeholder="City">
         <input type="date" name="starts_at" class="form-control border-radius input-lg datepicker" placeholder="City">
         <input type="date" name="ends_at" class="form-control border-radius input-lg datepicker" placeholder="City">
         <input type="submit" class="btn btn-danger btn-lg" value="Search">
