index page card design tweak

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -20,6 +20,7 @@
         position:absolute;
         bottom: 10px;
         left: 10px;
+        color: white;
       }
       .card-user {
         position: absolute;
