create new form tweak

--- a/app/views/guitars/new.html.erb
+++ b/app/views/guitars/new.html.erb
@@ -1,3 +1,5 @@
-<h1>Create a new guitar</h1>
+<div class="heading-centered" align="center">
+  <h2>Create a new guitar</h2>
+</div>
 
 <%= render "shared/form" %>
