all forms design updated

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -20,6 +20,12 @@
   </div>
 </div>
 
+
+
+<h3 class = "text-center">Some of the <strong id="red-word">best guitars</strong> and <strong id="red-word">hosts</strong> in our community </h3>
+
+
+
 <script>
   $(document).on("focus", "[data-behaviour~='datepicker']", function(e) {
   $(this).datepicker;
