--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -1,7 +1,15 @@
-<p>Hello <%= @resource.email %>!</p>
+<p text align=center>Hello <%= @resource.email %>!</p>
 
-<p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-offset-4 col-sm-4">
 
-<p>Click the link below to unlock your account:</p>
+      <p>Your account has been locked due to an excessive number of unsuccessful sign in attempts.</p>
 
-<p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+      <p>Click the link below to unlock your account:</p>
+
+      <p><%= link_to 'Unlock my account', unlock_url(@resource, unlock_token: @token) %></p>
+
+    </div>
+  </div>
+</div>
