--- a/app/views/guitars/index.html.erb
+++ b/app/views/guitars/index.html.erb
@@ -1,4 +1,6 @@
- <h2>Axes near you</h2>
+ <div class="heading-container">
+    <h3>Guitars near you</h3>
+ </div>
 
 <div class="main-wrapper"> <!-- contains both map and cards -->
 
@@ -8,7 +10,7 @@
         <% unless current_user == guitar.user %>
         <%= link_to guitar_path(guitar.id) do %>
           <div class="col-xs-12 col-sm-4">
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.2)), url('<%= guitar.image %>');">
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.2)), url('<%= guitar.image %>');">
               <div class="card-description">
                 <h4><%= guitar.brand[0..20] %></h4>
                 <p><%= guitar.price_per_day %> EUR/day</p>
@@ -26,4 +28,8 @@
 </div>
 </div>
 
-<%= link_to "search again", root_path %>
+
+<%= link_to "search again", root_path, class:"btn btn-primary" %>
+
+
+<!-- <a class='btn-btn-primary' href="root_path">Search again</a> -->
