Search functionality done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,14 +12,15 @@
 
         <input type="text" name="brand" class="form-control border-radius input-lg" placeholder="Brand">
         <input type="text" name="address" class="form-control border-radius input-lg" id="guitar_address" placeholder="City">
-        <input type="date" name="starts_at" class="form-control border-radius input-lg datepicker" placeholder="City">
-        <input type="date" name="ends_at" class="form-control border-radius input-lg datepicker" placeholder="City">
+        <input type="date" name="starts_at" class="form-control border-radius input-lg datepicker" placeholder="City" id="starts_at">
+        <input type="date" name="ends_at" class="form-control border-radius input-lg datepicker" placeholder="City" id="ends_at">
         <input type="submit" class="btn btn-danger btn-lg" value="Search">
       </form>
     </div>
   </div>
 </div>
 
+<% content_for :after_js do %>
 <script>
   $(document).on("focus", "[data-behaviour~='datepicker']", function(e) {
   $(this).datepicker;
@@ -30,6 +31,7 @@
   };
 });
 </script>
+<% end %>
 
 
 
