--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,31 +1,61 @@
 
-<h4>BOOKED GUITARS</h4>
-<% @bookings.each do |b| %>
-  <p><b><%= b.guitar[:brand] %></b></p>
-  <p><%= "TIME: #{b[:starts_at]}--#{b[:ends_at]}" %></p>
-  <p><%= "TYPE: #{b.guitar[:category]}" %></p>
-  <p><%= "Price/Day: #{b.guitar[:price_per_day]}" %></p>
-  <p><%= "TOTAL: #{b.fixed_price.to_i} €" %></p>
-  <p><%= image_tag b.guitar.image %></p>
-<% end %>
+<div class="wrapper">
 
-<h4>YOUR GUITARS</h4>
-<% @guitars.each do |g| %>
-  <p><b><%= g[:brand] %></b></p>
-  <p><%= "PRICE: #{g[:price_per_day]}" %></p>
-  <p><%= "TYPE: #{g[:category]}" %></p>
-  <% if g.bookings.present? %>
-    <p><b>BOOKINGS FOR THIS GUITAR</b></p>
-      <% g.bookings.each do |b| %>
-        <p><b><%= b.guitar[:brand] %></b></p>
-        <p><%= "TIME: #{b[:starts_at]}--#{b[:ends_at]}" %></p>
-        <p><%= "TYPE: #{b.guitar[:category]}" %></p>
-        <p><%= "USER: #{b.guitar.user[:email]}" %></p>
-        <p><%= image_tag b.guitar.image %></p>
+  <div class="card-heading">
+    <h4>Guitars I Have Booked</h4>
+  </div>
+
+  <div class="booked-guitars-container">
+    <% @bookings.each do |b| %>
+      <div class="card-content">
+        <div class="card-text">
+          <p><b><%= b.guitar[:brand] %></b></p>
+          <p><%= "TIME: #{b[:starts_at]}--#{b[:ends_at]}" %></p>
+          <p><%= "TYPE: #{b.guitar[:category]}" %></p>
+          <p><%= "Price/Day: #{b.guitar[:price_per_day]}" %></p>
+          <p><%= "TOTAL: #{b.fixed_price.to_i} €" %></p>
+        </div>
+        <div>
+          <p><%= image_tag b.guitar.image %></p>
+        </div>
+      </div>
+    <% end %>
+    </div>
+  </div>
+
+
+<div class="wrapper">
+
+  <div class="card-heading">
+    <h4>Guitars I Have Uploaded</h4>
+    </div>
+
+  <div class="your-guitars-container">
+    <% @guitars.each do |g| %>
+      <div class="card-content">
+        <p><b><%= g[:brand] %></b></p>
+        <p><%= "PRICE: #{g[:price_per_day]}" %></p>
+        <p><%= "TYPE: #{g[:category]}" %></p>
+        <% if g.bookings.present? %>
+          <p><b>BOOKINGS FOR THIS GUITAR</b></p>
+            <% g.bookings.each do |b| %>
+              <p><b><%= b.guitar[:brand] %></b></p>
+              <p><%= "TIME: #{b[:starts_at]}--#{b[:ends_at]}" %></p>
+              <p><%= "TYPE: #{b.guitar[:category]}" %></p>
+              <p><%= "USER: #{b.guitar.user[:email]}" %></p>
+            <div>
+              <p><%= image_tag b.guitar.image %></p>
+            </div>
+            <% end %>
+        <% else %>
+          <p><b>No one Has Booked This Guitar Yet</b></p>
+        <% end %>
       <% end %>
-  <% else %>
-    <p><b>YOU HAVE NO BOOKINGS FOR THIS GUITAR</b></p>
-  <% end %>
-<% end %>
+      </div>
+
+  </div>
+
+</div>
+
 
 
