--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>GuitarBuddy</title>
@@ -8,6 +9,7 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+    <%= favicon_link_tag 'https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzXKd3wQUw-MiKfd1sKLZl4gdGcw_TihicnP9OKBjijRPewmEk' %>
   </head>
   <body>
 <!--     <p class="notice"><%= notice %></p>
