--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,6 @@
 @import "layouts/index";
 @import "components/index";
 @import "pages/index";
-@import "users/show"
+@import "users/show";
+@import "booking/index";
 
