--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -7,7 +7,7 @@
           <p><%= "TIME: #{@booking[:starts_at]}--#{@booking[:ends_at]}" %></p>
           <p><%= "TYPE: #{@booking.guitar[:category]}" %></p>
           <p><%= "Price/Day: #{@booking.guitar[:price_per_day]}" %></p>
-          <p><%= "TOTAL: #{@booking.fixed_price.to_i} €" %></p>
+          <p><%= "SUBTOTAL: #{@booking.fixed_price.to_i} €" %></p>
         </div>
         <div>
           <p><%= image_tag @booking.guitar.image %></p>
@@ -16,9 +16,13 @@
     </div>
   </div>
 
+  <% duration = Date.parse(@booking[:ends_at]) - Date.parse(@booking[:starts_at]) %>
+  <% fee = @booking.fixed_price.to_i * 0.2 %>
+  <% grand_total = @booking.fixed_price.to_i * 1.2 %>
+
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-  Launch demo modal
+  Confirm Order!
 </button>
 
 <!-- Modal -->
@@ -26,19 +30,25 @@
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLongTitle">MONEY</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
+
       <div class="modal-body">
-        ...
+        <p><%= @booking.user[:email] %></p>
+        <p><%= "Duration: #{duration.to_i} days" %></p>
+        <p><%= "Handling Fee: #{fee.round} " %></p>
+        <div class="separating-line">
+          <p><%= "Total: #{grand_total} €" %></p>
+        </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default-special" data-dismiss="modal">Close</button>
         
       <%= link_to root_path(query: "Booked" ) do %>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary">Pay Us!</button>
       <% end %>
 
       </div>
