just added some stuff to makeit work on heroku

--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -39,7 +39,7 @@
       <div class="modal-body">
         <p><%= @booking.user[:email] %></p>
         <p><%= "Duration: #{duration.to_i} days" %></p>
-        <p><%= "Handling Fee: #{fee.round} " %></p>
+        <p><%= "Handling Fee: #{fee.round} €" %></p>
         <div class="separating-line">
           <p><%= "Total: #{grand_total} €" %></p>
         </div>
