--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,15 @@
     <%= action_cable_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all' %>
     <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+    <%= favicon_link_tag 'favicon.png' %>
+
+
+   <!--  ’https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQzXKd3wQUw-MiKfd1sKLZl4gdGcw_TihicnP9OKBjijRPewmEk' %> -->
+
   </head>
   <body>
+
+
 <!--     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
  -->    <%= render 'shared/navbar' %>
