--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,4 +1,4 @@
-/* Main navbar */
+ /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
   background: white;
@@ -75,3 +75,17 @@
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
 }
+
+.dropdown {
+  font-size: 15px;
+  color: #616668 ;
+  margin-right: 10px;
+}
+
+#navbar-wagon-menu {
+  margin-left: 20px;
+}
+
+
+
+
