--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,7 +2,7 @@
 
 form input.home-input {
   font-size: 18px;
-  color: grey;
+  color: #616668;
 }
 
 .banner {
@@ -40,3 +40,11 @@ form input.home-input {
 .title-index-padding {
   padding-bottom: 30px;
 }
+
+.search-bar input {
+  font-size: 19px;
+  // color: #616668;
+}
+
+
+
