--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -4,7 +4,7 @@
 
   <div class="banner-content">
     <h1>GuitarBuddy</h1>
-    <p>Rent the best guitar. Pick your brand, location and date</p>
+    <p>Rent the best guitar. Choose your brand, location and date</p>
 
 
     <div class="search-bar">
