rounded total price

--- a/app/views/bookings/confirmation.html.erb
+++ b/app/views/bookings/confirmation.html.erb
@@ -41,7 +41,7 @@
         <p><%= "Duration: #{duration.to_i} days" %></p>
         <p><%= "Handling Fee: #{fee.round} €" %></p>
         <div class="separating-line">
-          <p><%= "Total: #{grand_total} €" %></p>
+          <p><%= "Total: #{grand_total.round} €" %></p>
         </div>
       </div>
       <div class="modal-footer">
