--- a/app/views/guitars/index.html.erb
+++ b/app/views/guitars/index.html.erb
@@ -28,7 +28,7 @@
 </div>
 </div>
 
-
-<%= link_to "search again", root_path, class:"btn btn-primary" %>
-
+<div class="search-again">
+  <%= link_to "search again", root_path, class:"btn btn-primary" %>
+</div>
 
